network_layout: user li: fix button overflow

--- a/app/modules/network/scss/_network_layout.scss
+++ b/app/modules/network/scss/_network_layout.scss
@@ -46,7 +46,6 @@ $networkLayoutVerticalTabCeil: 700px;
       border-top: 1px solid rgba($grey, 0.2);
     }
     padding: 0;
-    margin: 0;
     .details{
       max-height: $stretch-user-height;
       overflow: hidden;
