--- a/app/modules/users/scss/_user_li.scss
+++ b/app/modules/users/scss/_user_li.scss
@@ -110,10 +110,7 @@ $user-bg: #ddd;
       }
       .userMenu{
         align-self: center;
-        height: 3.2em;
-        a{
-          padding: 1em;
-        }
+        margin-bottom: 1em;
       }
     }
   }
